<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".activity_kpv">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="Кривая Производственных Возможностей"
            android:textAlignment="center"
            android:layout_marginRight="20dp"
            android:textColor="#1F1E1E"
            android:textSize="22sp"></TextView>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1"
        android:background="?attr/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".kpv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/kpv_text"
                android:textColor="#000000"
                android:textSize="15dp" />

            <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/grafik_kpv" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/kpv_text2"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="10dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/kpv_text3_dots"
                android:textColor="#000000"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/alternative_cost" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="10dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/oc_definition"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="10dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/kpv_summing"
                android:textColor="#000000"
                android:textSize="15dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart1"
                android:layout_width="300dip"
                android:layout_height="300dip" />
            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:min="0"/>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:min="0"/>

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:min="0"/>

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:min="0"/>





        </LinearLayout>

    </ScrollView>

</RelativeLayout>