<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".activity_ktv">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/my_font"
            android:text="Кривая Торговых Возможностей"
            android:textAlignment="textStart"
            android:textColor="#1F1E1E"
            android:textSize="22sp"></TextView>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar2"
        android:background="?attr/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".kpv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/comparative_ktv"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/some_ktv_text"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/absolute_ktv"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/the_rule_of_ktv"
                android:textColor="#000000"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ktv" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="20dip"
                android:alpha="1"
                android:fontFamily="@font/discription_font"
                android:text="@string/example_of_trade"
                android:textColor="#000000"
                android:textSize="15dp" />

            <GridLayout
                android:id="@+id/graphics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:columnCount="2"
                android:orientation="horizontal">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart1"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_column="0"
                    android:layout_marginRight="20dip"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart2"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_column="1"
                    android:layout_marginLeft="20dip"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart3"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_column="0"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dip"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart4"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_column="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dip"/>

            </GridLayout>

            <SeekBar
                android:id="@+id/seekBar_ktv_1"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:min="50"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>